# slick

./: .bazelignore  .bazelrc  .gitignore  .prettierrc.mjs  BUILD.bazel  MODULE.bazel  README.md  Tiltfile  maven_install.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.spec.json
.githooks/: pre-commit
.github/workflows/: test.yml
apps/slick/: BUILD.bazel
apps/slick/main/java/slick/: Application.java  BUILD.bazel  SlickController.java
apps/slick/src/main/java/slick/: Application.java  BUILD.bazel  K8sContext.java  SlickController.java  SlickWebSocketHandler.java  WebSocketConfig.java
apps/slick/src/main/resources/: BUILD.bazel  application.properties  logback-spring.xml
apps/slick/src/test/java/slick/: BUILD.bazel  SlickControllerIntegrationTest.java  SlickWebSocketIntegrationTest.java
apps/slock/: BUILD.bazel  index.template.html  main.ts  style.scss
apps/slock/root/: BUILD.bazel  root.component.html  root.component.ts
apps/slock/root/foo/: BUILD.bazel  foo.component.html  foo.component.spec.ts  foo.component.ts  index.ts
k8s/: slick-ws-ingress.yaml  slick.yaml
tools/: BUILD.bazel  ngc.esbuild.ts  slck_ng_app.bzl  slck_ng_project.bzl  slck_ts_project.bzl  slck_vite.bzl  slck_vite_analog_ts_config.bzl  test-setup.ts  vite.config.mjs
tools/format/: BUILD.bazel
tools/k8s/: slick.yaml
tools/tilt/: ingress-nginx.tiltfile  slick.tiltfile  slock.tiltfile
