load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "slick",
    srcs = [
        "Application.java",
        "SlickController.java",
        "SlickWebSocketHandler.java",
        "WebSocketConfig.java",
    ],
    resources = ["//apps/slick/src/main/resources:resources"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_starter_websocket",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_messaging",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_websocket",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
