load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "SlickControllerIntegrationTest",
    srcs = ["SlickControllerIntegrationTest.java"],
    test_class = "slick.SlickControllerIntegrationTest",
    deps = [
        "//apps/slick/src/main/java/slick",
        "@maven//:io_rest_assured_rest_assured",
        "@maven//:org_hamcrest_hamcrest_library",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_runner",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_test",
    ],
)
